--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
   "devDependencies": {
     "copyfiles": "^2.4.1",
     "node-http-server": "^8.1.3"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
