--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "url": "https://github.com/RIAEvangelist/vanilla-test.git"
   },
   "dependencies": {
-    "ansi-colors-es6": "^5.0.0",
-    "strong-type": "^1.1.0"
+    "ansi-colors-es6": "5.0.0",
+    "strong-type": "1.1.0"
   },
   "devDependencies": {
     "copyfiles": "^2.4.1",
