--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "url": "https://github.com/node-ipc/vanilla-test.git"
   },
   "dependencies": {
-    "ansi-colors-es6": "5.0.0",
-    "strong-type": "1.1.0"
+    "@achrinza/strong-type": "1.1.1",
+    "ansi-colors-es6": "5.0.0"
   },
   "devDependencies": {
     "copyfiles": "^2.4.1",
-    "node-http-server": "^8.1.3"
+    "node-http-server": "8.1.3"
   },
   "packageManager": "yarn@3.2.0"
 }
