--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubunutu-latest
+          - ubuntu-latest
           - macos-latest
           - windows-latest
         node-version:
